WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76038
Fix more style errors in CSSParser.cpp (followup patch)
https://bugs.webkit.org/show_bug.cgi?id=76038
Summary
Fix more style errors in CSSParser.cpp (followup patch)
Zoltan Herczeg
Reported
2012-01-11 01:10:43 PST
Previous was #75854
Attachments
patch
(8.18 KB, patch)
2012-01-11 01:16 PST
,
Zoltan Herczeg
zimmermann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zoltan Herczeg
Comment 1
2012-01-11 01:16:07 PST
Created
attachment 121993
[details]
patch
Nikolas Zimmermann
Comment 2
2012-01-11 01:23:55 PST
Comment on
attachment 121993
[details]
patch r=me.
Zoltan Herczeg
Comment 3
2012-01-11 02:12:52 PST
Landed in:
http://trac.webkit.org/changeset/104688
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug