Fix more style errors in CSSParser.cpp (followup patch) https://bugs.webkit.org/show_bug.cgi?id=76038

Reviewed by Nikolas Zimmermann.

The previous was: http://trac.webkit.org/changeset/104576
This patch mostly contains C cast to static_cast rewrites.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue):
(WebCore::CSSParser::parseBackgroundColor):
(WebCore::ShadowParseContext::commitLength):
(WebCore::BorderImageSliceParseContext::commitNumber):
(WebCore::BorderImageSliceParseContext::commitBorderImageSlice):
(WebCore::BorderImageQuadParseContext::commitNumber):
(WebCore::BorderImageQuadParseContext::commitBorderImageQuad):
(WebCore::parseDeprecatedGradientPoint):



Canonical link: https://commits.webkit.org/92860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104688 268f45cc-cd09-0410-ab3c-d52691b4dbfc